Fix inverted body in dark mode

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -94,10 +94,18 @@ body {
       display: block !important;
     }
 
-    &.invert {
-      .body {
+    &.no-invert .body {
+      color: white;
+      background: black;
+
+      iframe {
         filter: invert(1);
       }
+    }
+
+    &.invert .body {
+      color: black;
+      background: white;
     }
   }
 }
@@ -481,8 +489,6 @@ header {
         flex: 1;
         padding: 0;
         margin-top: 0.75rem;
-        color: var(--black);
-        background: var(--white);
 
         pre {
           font-family: Inter, sans-serif;
@@ -491,7 +497,7 @@ header {
 
         iframe,
         pre {
-          border: 1px solid #ddd;
+          border: 1px solid var(--table-border);
           width: 100%;
           height: 100%;
           padding: 0.5rem;
